# awesome_fl_seg

./: .gitignore  Resize_trains_0.sh  Resize_trains_1.sh  Resize_trains_2.sh  Resize_trains_3.sh  create_mr_cityscapes.py  evaluate.py  graph.ipynb  make_mr_dataset.sh  mrkd_fl_trains_6.sh  mrkd_fl_trains_7.sh  pyproject.toml  run.sh  test.sh  test_2.sh  test_cl.py  train_cl.py  train_clustered_fl.py  train_fl.py  train_fl_one_class.py  utils.py  vis_utils.py
config/: config.yaml
config/dataset/: cityscapes.yaml
config/model/: segformer_mit-b0.yaml
config/optimizer/: adamw.yaml
config/scheduler/: poly.yaml
segmentation/: optimizer.py  scheduler.py
segmentation/datasets/: cityscapes.py  cityscapes_multiple_classes.py  cityscapes_one_class.py  utils.py
segmentation/datasets/transforms/: basic_augmentation.py  formatting.py  photometric_distortion.py  pipelines.py
segmentation/models/: load_checkpoint.py  segformer.py
